Add number of neutrinos to run description header for FLAMINGO.

--- a/flamingo/description.html
+++ b/flamingo/description.html
@@ -17,12 +17,14 @@
         <th>Dark Matter</th>
         <th>Star</th>
         <th>Black Hole</th>
+        <th>Neutrino</th>
     </tr>
     <tr>
         <td>{{ data.metadata.n_gas }}</td>
         <td>{{ data.metadata.n_dark_matter }}</td>
         <td>{{ data.metadata.n_stars }}</td>
         <td>{{ data.metadata.n_black_holes }}</td>
+        <td>{{ data.metadata.n_neutrinos }}</td>
     </tr>
 </table>
 
