--- a/colibre/description.html
+++ b/colibre/description.html
@@ -136,6 +136,23 @@
         <td>{{ data.metadata.parameters | get_if_present_float("COLIBREFeedback:SNII_energy_fraction_max") }}</td>
     </tr>
     <tr>
+        <td>\(n_{\rm Z}\)</td>
+        <td>{{ data.metadata.parameters | get_if_present_float("COLIBREFeedback:SNII_energy_fraction_n_Z") }}</td>
+    </tr>
+    <tr>
+        <td>\(Z_{\rm E,pivot}\)</td>
+        <td>{{ data.metadata.parameters | get_if_present_float("COLIBREFeedback:SNII_energy_fraction_Z_0") }}</td>
+    </tr>
+    <tr>
+        <td>\(n_{\rm n}\)</td>
+        <td>{{ data.metadata.parameters | get_if_present_float("COLIBREFeedback:SNII_energy_fraction_n_n") }}</td>
+    </tr>
+    <tr>
+        <td>\(n_{\rm E,pivot}\)</td>
+        <td>{{ data.metadata.parameters | get_if_present_float("COLIBREFeedback:SNII_energy_fraction_n_0_H_p_cm3") }}
+        cm\(^{-3}\) </td>
+    </tr>
+    <tr>
         <td>\(f_{\rm kinetic}\)</td>
         <td>{{ data.metadata.parameters | get_if_present_float("COLIBREFeedback:SNII_f_kinetic") }}</td>
     </tr>
