--- a/colibre/description.html
+++ b/colibre/description.html
@@ -463,7 +463,7 @@
         <td>{{ data.metadata.parameters | get_if_present_float("SNIaDTD:SNIa_delay_time_Gyr") }} Gyr</td>
     </tr>
     <tr>
-        <td>exponential delay time</td>
+        <td>Exponential delay time</td>
         <td>{{ data.metadata.parameters | get_if_present_float("SNIaDTD:SNIa_timescale_Gyr") }} Gyr</td>
     </tr>
 </table>
